gateway/1.5/modules/ROOT/pages/flex-local-reg-run-up.adoc
= Registering and Running in Local Mode with a Username and Password
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images
:reg-mode: Local

//table with tech logos and links (linux, docker, k8, openshift)
include::partial$task-reg-run-flex-gateway.adoc[tags=table-logos-links]

[[prereqs]]
// Prerequisites
include::partial$task-reg-run-flex-gateway.adoc[tags=prerequisites-heading;prerequisites;environment-prerequisites;user-prerequisites]

[[linux]]
// Register and run with a username and password as a Linux service
include::partial$task-reg-run-flex-gateway.adoc[tags=user-linux-heading;reg-command-intro;sub-coll-info;user-replace-content;environment-replace-content;replace-content;reg-command-heading;reg-command-1;linux-reg-command;user-reg-command;environment-reg-command;organization-reg-command;output-reg-command-linux;reg-command-2;after-reg;linux-after-reg;create-config-folder-file;config-content;linux-start-commands]

[[container]]
include::partial$task-reg-run-flex-gateway.adoc[tags=user-container-heading]
include::partial$task-reg-run-flex-gateway.adoc[tags=table-containers-logos-heading]
include::partial$task-reg-run-flex-gateway.adoc[tags=table-containers-logos-links]

[[docker]]
// Register and run with a username and password in a Docker container
include::partial$task-reg-run-flex-gateway.adoc[tags=user-docker-heading;reg-command-intro;sub-coll-info-container;user-replace-content;environment-replace-content;replace-content;reg-command-heading-container;docker-create-directory-note;reg-command-1;docker-reg-command;user-reg-command;environment-reg-command;organization-reg-command;output-reg-command-docker;reg-command-2;after-reg;after-reg-2;start-command-local-intro;start-command-local;start-command-local-valid]

// PODMAN
[[podman]]
// Register and run with a username and password in a Podmsn container
include::partial$task-reg-run-flex-gateway.adoc[tags=user-podman-heading;reg-command-intro;sub-coll-info-container;user-replace-content;environment-replace-content;replace-content;reg-command-heading-container;docker-create-directory-note;reg-command-1;podman-reg-command;user-reg-command;environment-reg-command;organization-reg-command;output-reg-command-docker;reg-command-2;after-reg;after-reg-2;start-command-local-intro;podman-start-command-local;start-command-local-valid]

// KUBERNETES 
[[kubernetes]]
// Register and run with a username and password in a kubernetes cluster
//heading
include::partial$task-reg-run-flex-gateway.adoc[tags=user-k8s-heading]
// - task overview
include::partial$task-reg-run-flex-gateway.adoc[tags=k8s-install-flex-helm-chart-intro-local]
//- cluster-level access when rbac enabled, as for OpenShift
include::partial$prerequisites.adoc[tags=rbac-permission-k8]
//- links to steps
include::partial$task-reg-run-flex-gateway.adoc[tags=links-to-k8s-reg-steps]
//- local mode supplemental info for k8 and openshift
include::partial$task-reg-run-flex-gateway.adoc[tag=k8s-local-intro]

[[options-k8s]]
//sub collected info
include::partial$task-reg-run-flex-gateway.adoc[tags=sub-coll-info;user-replace-content;environment-replace-content;replace-content]

[[reg-k8s]]
include::partial$task-reg-run-flex-gateway.adoc[tags=reg-command-heading]
include::partial$task-reg-run-flex-gateway.adoc[tags=reg-command-heading-intro]

[[docker-container-reg]]
.*Docker*
[%collapsible]
====
include::partial$task-reg-run-flex-gateway.adoc[tags=docker-reg-command-heading-intro]

//reg command
include::partial$task-reg-run-flex-gateway.adoc[tags=reg-command-1;docker-reg-command;user-reg-command;environment-reg-command;organization-reg-command;output-reg-command-docker;reg-command-2;after-reg;k8s-after-reg]
====

[[podman-container-reg]]
.*Podman*
[%collapsible]
====
include::partial$task-reg-run-flex-gateway.adoc[tags=podman-reg-command-heading-intro]

//reg command
include::partial$task-reg-run-flex-gateway.adoc[tags=reg-command-1;podman-reg-command;user-reg-command;environment-reg-command;organization-reg-command;output-reg-command-docker;reg-command-2;after-reg;k8s-after-reg]
====

[[deploy-k8s]]
//install helm chart
//- title
include::partial$task-reg-run-flex-gateway.adoc[tags=k8s-install-flex-helm-chart-title]
//- helm chart info
include::partial$task-reg-run-flex-gateway.adoc[tags=k8s-flex-helm-chart]
include::partial$prerequisites.adoc[tags=helm] 
Refer to <<helm-options-k8s>> for configuration options.
//- add chart repo and deploy flex via chart
include::partial$task-reg-run-flex-gateway.adoc[tags=k8s-flex-helm-chart-add;k8s-flex-helm-chart-deploy-local]

[[helm-options-k8s]]
//helm config options
include::partial$task-reg-run-flex-gateway.adoc[tags=helm-chart-options]


// OPENSHIFT 
[[openshift]]
// Register and run with a username and password in a openshift cluster
//heading
include::partial$task-reg-run-flex-gateway.adoc[tags=user-openshift-heading]
// - task overview
include::partial$task-reg-run-flex-gateway.adoc[tags=k8s-install-flex-helm-chart-intro-local]
//- cluster-level access when rbac enabled, as for OpenShift
include::partial$prerequisites.adoc[tags=rbac-permission-k8;rbac-role-openshift]
//- note (openshift command line procedures same as k8)
include::partial$task-reg-run-flex-gateway.adoc[tags=note-openshift-k8]
//- links to steps
include::partial$task-reg-run-flex-gateway.adoc[tags=links-to-openshift-reg-steps]
//- local mode supplemental info for k8 and openshift
include::partial$task-reg-run-flex-gateway.adoc[tag=k8s-local-intro]

[[options-openshift]]
//sub collected info
include::partial$task-reg-run-flex-gateway.adoc[tags=sub-coll-info;user-replace-content;environment-replace-content;replace-content]

[[reg-openshift]]
include::partial$task-reg-run-flex-gateway.adoc[tags=reg-command-heading]

include::partial$task-reg-run-flex-gateway.adoc[tags=reg-command-openshift-heading-intro]

[[docker-openshift-container-reg]]
.*Docker*
[%collapsible]
====
include::partial$task-reg-run-flex-gateway.adoc[tags=docker-reg-command-heading-intro]

//reg command
include::partial$task-reg-run-flex-gateway.adoc[tags=reg-command-1;docker-reg-command;user-reg-command;environment-reg-command;organization-reg-command;output-reg-command-docker;reg-command-2;after-reg;k8s-after-reg]
====

[[podman-openshift-container-reg]]
.*Podman*
[%collapsible]
====
include::partial$task-reg-run-flex-gateway.adoc[tags=podman-reg-command-heading-intro]

//reg command
include::partial$task-reg-run-flex-gateway.adoc[tags=reg-command-1;podman-reg-command;user-reg-command;environment-reg-command;organization-reg-command;output-reg-command-docker;reg-command-2;after-reg;k8s-after-reg]
====

[[deploy-openshift]]
//install helm chart
//- title
include::partial$task-reg-run-flex-gateway.adoc[tags=k8s-install-flex-helm-chart-title]
//- helm chart info
include::partial$task-reg-run-flex-gateway.adoc[tags=k8s-flex-helm-chart]
include::partial$prerequisites.adoc[tags=helm] 
Refer to <<helm-options-openshift>> for configuration options.
//- add chart repo and deploy flex via chart
include::partial$task-reg-run-flex-gateway.adoc[tags=k8s-flex-helm-chart-add;k8s-flex-helm-chart-deploy-local]

[[helm-options-openshift]]
//helm config options
include::partial$task-reg-run-flex-gateway.adoc[tags=helm-chart-options]


== See Also

* xref:flex-gateway-getting-started.adoc[]
* xref:flex-conn-reg-run.adoc[]